--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <h2>About Me</h2>
     <div style="display: flex; flex-direction: column; align-items: center; gap: 2rem;">
       <img src="Headshot.jpg" alt="Portrait Photo" class="portrait" style="max-width: 200px; border-radius: 12px; object-fit: cover; object-position: top;">
-      <div style="max-width: 600px;">
+      <div style="max-width: 65%;">
         <p>
-          Hello! My name is Jack Keller, and I’m a Master’s student at Georgia Tech studying computer science and specializing in Modeling & Simulation. I graduate this December, and I’m currently pursuing full-time software engineering roles beginning as early as January 2026.
+          Hello! My name is Jack Keller, and I’m a Master’s student at Georgia Tech studying Computer Science and specializing in Modeling & Simulation. I graduate this December, and I’m currently pursuing full-time software engineering roles beginning as early as January 2026.
           <br><br>
           The purpose of this site is to showcase a bit of my experience, what I’m passionate about, and some of the projects I’m most proud of. If you’d like to get in touch, please see below and reach out!
         </p>
@@ -38,7 +38,7 @@
   <!-- Experience and Interests Section -->
   <section class="section" id="experience">
     <h2>Experience and Interests</h2>
-    <div class="experience-content" style="max-width: 600px;">
+    <div class="experience-content" style="max-width: 65%;">
       <p></p>
       My experience includes several software engineering internships at <strong>J.J. Keller &amp; Associates, Inc.</strong> and <strong>Honeywell</strong>, as well as research with the <strong>Robotic Musicianship Lab</strong> and <strong>Puerto Rico Planning Studio</strong> (focused on post-disaster recovery) at Georgia Tech.
       </p>
