--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
           <img src="projects/puerto-rico.jpeg" alt="Puerto Rico Planning Studio">
           <h3>Puerto Rico Planning Studio</h3>
             <p>
-            Conducted post-disaster reconstruction research in Puerto Rico, utilizing R and GIS mapping tools to analyze construction trends.<br>
-            Represented the team and presented findings at the 2024 Georgia Tech Sustainability Showcase.
+            Conducted post-disaster reconstruction research in Puerto Rico, utilizing R and GIS mapping tools to analyze construction trends. Represented the team and presented findings at the 2024 Georgia Tech Sustainability Showcase.
             </p>
         </div>
         <div class="project">
