--- a/index.html
+++ b/index.html
@@ -13,6 +13,53 @@
 
 <body class="antialiased leading-relaxed">
 
+  <!-- Wolf sheep simulation -->
+  <!-- <canvas id="ecosystemCanvas" class="fixed top-0 left-0 w-full h-full -z-10"></canvas>
+
+  <div id="simulation-controls" class="bg-gray-100 dark:bg-gray-700 p-4 shadow-md sticky top-16 md:top-0 z-40 text-sm">
+    <div class="container mx-auto grid grid-cols-2 sm:grid-cols-3 md:grid-cols-6 gap-4 items-center">
+      <div>
+        <label for="initialSheep" class="block font-medium text-gray-700 dark:text-gray-300">Sheep:</label>
+        <input type="range" id="initialSheep" min="10" max="300" value="150" class="w-full slider-thumb">
+        <span id="initialSheepValue" class="text-xs text-gray-600 dark:text-gray-400">150</span>
+      </div>
+      <div>
+        <label for="initialWolves" class="block font-medium text-gray-700 dark:text-gray-300">Wolves:</label>
+        <input type="range" id="initialWolves" min="5" max="100" value="20" class="w-full slider-thumb">
+        <span id="initialWolvesValue" class="text-xs text-gray-600 dark:text-gray-400">20</span>
+      </div>
+      <div>
+        <label for="sheepReproduceRate" class="block font-medium text-gray-700 dark:text-gray-300">Sheep Repro:</label>
+        <input type="range" id="sheepReproduceRate" min="0.01" max="0.1" value="0.05" step="0.005"
+          class="w-full slider-thumb">
+        <span id="sheepReproduceRateValue" class="text-xs text-gray-600 dark:text-gray-400">0.05</span>
+      </div>
+      <div>
+        <label for="wolfReproduceRate" class="block font-medium text-gray-700 dark:text-gray-300">Wolf Repro:</label>
+        <input type="range" id="wolfReproduceRate" min="0.01" max="0.1" value="0.03" step="0.005"
+          class="w-full slider-thumb">
+        <span id="wolfReproduceRateValue" class="text-xs text-gray-600 dark:text-gray-400">0.03</span>
+      </div>
+      <div>
+        <label for="wolfEnergyGain" class="block font-medium text-gray-700 dark:text-gray-300">Wolf Energy Gain:</label>
+        <input type="range" id="wolfEnergyGain" min="5" max="50" value="20" class="w-full slider-thumb">
+        <span id="wolfEnergyGainValue" class="text-xs text-gray-600 dark:text-gray-400">20</span>
+      </div>
+      <div>
+        <label for="wolfEnergyLoss" class="block font-medium text-gray-700 dark:text-gray-300">Wolf Energy Loss:</label>
+        <input type="range" id="wolfEnergyLoss" min="0.1" max="2" value="0.5" step="0.1" class="w-full slider-thumb">
+        <span id="wolfEnergyLossValue" class="text-xs text-gray-600 dark:text-gray-400">0.5</span>
+      </div>
+    </div>
+    <div class="container mx-auto text-center mt-2">
+      <button id="restartSimulation"
+        class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-1 px-3 rounded text-xs">Restart
+        Simulation</button>
+    </div>
+  </div> -->
+  <!-- End of simulation content
+
+  <!-- Start of regular page -->
   <header class="bg-white shadow-md sticky top-0 z-50">
     <div class="container mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex items-center justify-between h-16">
@@ -277,7 +324,7 @@
             <div class="md:flex md:space-x-6">
               <div class="md:w-1/3 mb-4 md:mb-0">
                 <video src="projects_media/kapyong-demo.mp4" class="w-full h-auto object-cover rounded-md shadow-sm"
-                controls controlsList="fullscreen"
+                  controls controlsList="fullscreen"
                   onerror="this.onerror=null; this.src='https://placehold.co/600x400/dbeafe/1e3a8a?text=Video+Error';">
                 </video>
               </div>
