--- a/index.html
+++ b/index.html
@@ -14,50 +14,7 @@
 <body class="antialiased leading-relaxed">
 
   <!-- Wolf sheep simulation -->
-  <!-- <canvas id="ecosystemCanvas" class="fixed top-0 left-0 w-full h-full -z-10"></canvas>
-
-  <div id="simulation-controls" class="bg-gray-100 dark:bg-gray-700 p-4 shadow-md sticky top-16 md:top-0 z-40 text-sm">
-    <div class="container mx-auto grid grid-cols-2 sm:grid-cols-3 md:grid-cols-6 gap-4 items-center">
-      <div>
-        <label for="initialSheep" class="block font-medium text-gray-700 dark:text-gray-300">Sheep:</label>
-        <input type="range" id="initialSheep" min="10" max="300" value="150" class="w-full slider-thumb">
-        <span id="initialSheepValue" class="text-xs text-gray-600 dark:text-gray-400">150</span>
-      </div>
-      <div>
-        <label for="initialWolves" class="block font-medium text-gray-700 dark:text-gray-300">Wolves:</label>
-        <input type="range" id="initialWolves" min="5" max="100" value="20" class="w-full slider-thumb">
-        <span id="initialWolvesValue" class="text-xs text-gray-600 dark:text-gray-400">20</span>
-      </div>
-      <div>
-        <label for="sheepReproduceRate" class="block font-medium text-gray-700 dark:text-gray-300">Sheep Repro:</label>
-        <input type="range" id="sheepReproduceRate" min="0.01" max="0.1" value="0.05" step="0.005"
-          class="w-full slider-thumb">
-        <span id="sheepReproduceRateValue" class="text-xs text-gray-600 dark:text-gray-400">0.05</span>
-      </div>
-      <div>
-        <label for="wolfReproduceRate" class="block font-medium text-gray-700 dark:text-gray-300">Wolf Repro:</label>
-        <input type="range" id="wolfReproduceRate" min="0.01" max="0.1" value="0.03" step="0.005"
-          class="w-full slider-thumb">
-        <span id="wolfReproduceRateValue" class="text-xs text-gray-600 dark:text-gray-400">0.03</span>
-      </div>
-      <div>
-        <label for="wolfEnergyGain" class="block font-medium text-gray-700 dark:text-gray-300">Wolf Energy Gain:</label>
-        <input type="range" id="wolfEnergyGain" min="5" max="50" value="20" class="w-full slider-thumb">
-        <span id="wolfEnergyGainValue" class="text-xs text-gray-600 dark:text-gray-400">20</span>
-      </div>
-      <div>
-        <label for="wolfEnergyLoss" class="block font-medium text-gray-700 dark:text-gray-300">Wolf Energy Loss:</label>
-        <input type="range" id="wolfEnergyLoss" min="0.1" max="2" value="0.5" step="0.1" class="w-full slider-thumb">
-        <span id="wolfEnergyLossValue" class="text-xs text-gray-600 dark:text-gray-400">0.5</span>
-      </div>
-    </div>
-    <div class="container mx-auto text-center mt-2">
-      <button id="restartSimulation"
-        class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-1 px-3 rounded text-xs">Restart
-        Simulation</button>
-    </div>
-  </div> -->
-  <!-- End of simulation content
+  <canvas id="ecosystemCanvas" class="fixed top-0 left-0 w-full h-full -z-10"></canvas>
 
   <!-- Start of regular page -->
   <header class="bg-white shadow-md sticky top-0 z-50">
@@ -120,7 +77,7 @@
   <main class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12">
 
     <section id="about" class="content-section active" aria-labelledby="about-heading">
-      <div class="bg-white shadow-lg rounded-lg p-6 md:p-10">
+      <div class="bg-white/90 shadow-lg rounded-lg p-6 md:p-10">
         <h1 id="about-heading" class="text-3xl sm:text-4xl font-bold text-gray-800 mb-6 text-center md:text-left">About
           Me</h1>
         <div class="md:flex md:items-start md:space-x-8">
@@ -153,6 +110,39 @@
               systems, urban planning, and sustainability to improve people’s lives and society as a whole.
             </p>
           </div>
+        </div>
+
+        <hr class="my-8 md:my-12 border-gray-200">
+
+        <!-- <h3 class="text-lg font-semibold text-gray-700 mb-3 text-center">Simulation Controls</h3> -->
+        <div class="space-y-4 text-gray-700 text-med text-center">
+          <p>
+            You may notice that the background to this site is a simulation itself! You can play with the sliders below
+            to adjust the amounts of sheep and wolves and see how long the sheep survive!
+          </p>
+        </div>
+        <div class="flex justify-center space-x-8 mt-3">
+          <div>
+            <label for="initialSheep" class="block font-medium text-gray-700 dark:text-gray-300">Initial sheep:</label>
+            <input type="range" id="initialSheep" min="10" max="100" value="80" class="w-full slider-thumb">
+            <span id="initialSheepValue" class="text-xs text-gray-600 dark:text-gray-400">80</span>
+          </div>
+          <div>
+            <label for="initialWolves" class="block font-medium text-gray-700 dark:text-gray-300">Initial
+              wolves:</label>
+            <input type="range" id="initialWolves" min="5" max="100" value="50" class="w-full slider-thumb">
+            <span id="initialWolvesValue" class="text-xs text-gray-600 dark:text-gray-400">50</span>
+          </div>
+        </div>
+        <div class="text-center mt-4 space-x-2">
+          <button id="stopSimulation"
+            class="bg-red-500 hover:bg-red-600 text-white font-semibold py-1 px-3 rounded text-xs">
+            Stop
+          </button>
+          <button id="restartSimulation"
+            class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-1 px-3 rounded text-xs">
+            Restart
+          </button>
         </div>
 
         <hr class="my-8 md:my-12 border-gray-200 transition-colors duration-300">
