--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <!-- <h3 class="text-lg font-semibold text-gray-700 mb-3 text-center">Simulation Controls</h3> -->
         <div class="space-y-4 text-gray-700 text-med text-center">
           <p>
-            You may notice that the background to this site is a simulation itself! You can play with the sliders below
+            You may notice that the background of this site is a simulation itself! You can play with the sliders below
             to adjust the amounts of sheep and wolves and see how long the sheep survive!
           </p>
         </div>
@@ -130,8 +130,8 @@
           <div>
             <label for="initialWolves" class="block font-medium text-gray-700 dark:text-gray-300">Initial
               wolves:</label>
-            <input type="range" id="initialWolves" min="5" max="100" value="50" class="w-full slider-thumb">
-            <span id="initialWolvesValue" class="text-xs text-gray-600 dark:text-gray-400">50</span>
+            <input type="range" id="initialWolves" min="5" max="100" value="35" class="w-full slider-thumb">
+            <span id="initialWolvesValue" class="text-xs text-gray-600 dark:text-gray-400">35</span>
           </div>
         </div>
         <div class="text-center mt-4 space-x-2">
@@ -143,6 +143,10 @@
             class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-1 px-3 rounded text-xs">
             Restart
           </button>
+        </div>
+
+        <div class="mt-6 text-center text-gray-600 dark:text-gray-400 text-xs italic">
+          <p>Note: May not render on Safari if JavaScript is not enabled.</p>
         </div>
 
         <hr class="my-8 md:my-12 border-gray-200 transition-colors duration-300">
