--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 
         <nav class="hidden md:flex space-x-8 items-center">
           <a href="#" id="nav-about"
-            class="nav-link text-gray-700 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400 hover:border-blue-600 dark:hover:border-blue-400 border-transparent px-1 py-2 text-sm font-medium"
+            class="nav-link text-gray-700 hover:text-blue-600 hover:border-blue-600 border-transparent px-1 py-2 text-sm font-medium"
             onclick="showSection('about', this); return false;" aria-current="page">About Me</a>
           <a href="#" id="nav-experience"
-            class="nav-link text-gray-700 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400 hover:border-blue-600 dark:hover:border-blue-400 border-transparent py-2 text-sm font-medium"
+            class="nav-link text-gray-700 hover:text-blue-600 hover:border-blue-600 border-transparent py-2 text-sm font-medium"
             onclick="showSection('experience', this); return false;">Experience & Skills</a>
           <a href="#" id="nav-projects"
-            class="nav-link text-gray-700 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400 hover:border-blue-600 dark:hover:border-blue-400 border-transparent px-1 py-2 text-sm font-medium"
+            class="nav-link text-gray-700 hover:text-blue-600 hover:border-blue-600 border-transparent px-1 py-2 text-sm font-medium"
             onclick="showSection('projects', this); return false;">Projects</a>
           <a href="#contact-info-heading" id="nav-contact-anchor"
-            class="nav-link text-gray-700 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400 border-transparent px-1 py-2 text-sm font-medium"
+            class="nav-link text-gray-700 hover:text-blue-600 border-transparent px-1 py-2 text-sm font-medium"
             onclick="navigateToContactInfo(this, false); return false;">Contact</a>
         </nav>
 
@@ -97,8 +97,8 @@
             <p>
               Alongside several <strong>software engineering internships</strong> and <strong>research
                 experience</strong>, I believe what truly sets me apart is my ability to break down complex concepts
-              into clear, understandable
-              terms to help others learn and succeed — a skill I’ve honed as a <strong>Teaching
+              into clearer, understandable
+              terms to help others learn and succeed — a skill I’ve been practicing as a <strong>Teaching
                 Assistant</strong> for both Computer Organization &amp; Programming (CS 2110) and Algorithms (CS
               3510/11) at
               GT. Building on the past four semesters as a TA, I'm very excited to lead Algorithms as <strong>Head
@@ -107,7 +107,7 @@
             <p>
               My primary interests lie in <strong>modeling and simulation</strong> and <strong>artificial
                 intelligence</strong>. I aim to apply these technologies to areas like infrastructure and
-              systems, urban planning, and sustainability to improve people’s lives and society as a whole.
+              urban planning, science, and sustainability to improve people’s lives and society as a whole.
             </p>
           </div>
         </div>
@@ -117,21 +117,21 @@
         <!-- <h3 class="text-lg font-semibold text-gray-700 mb-3 text-center">Simulation Controls</h3> -->
         <div class="space-y-4 text-gray-700 text-med text-center">
           <p>
-            You may notice that the background of this site is a simulation itself! You can play with the sliders below
-            to adjust the amounts of sheep and wolves and see how long the sheep survive!
+            You might have noticed that the background of this site is a simulation itself! Use the sliders below to
+            adjust the numbers of sheep and wolves, and see how long the sheep survive!
           </p>
         </div>
         <div class="flex justify-center space-x-8 mt-3">
           <div>
-            <label for="initialSheep" class="block font-medium text-gray-700 dark:text-gray-300">Initial sheep:</label>
+            <label for="initialSheep" class="block font-medium text-gray-700">Initial sheep:</label>
             <input type="range" id="initialSheep" min="10" max="100" value="80" class="w-full slider-thumb">
-            <span id="initialSheepValue" class="text-xs text-gray-600 dark:text-gray-400">80</span>
+            <span id="initialSheepValue" class="text-xs text-gray-600">80</span>
           </div>
           <div>
-            <label for="initialWolves" class="block font-medium text-gray-700 dark:text-gray-300">Initial
+            <label for="initialWolves" class="block font-medium text-gray-700">Initial
               wolves:</label>
             <input type="range" id="initialWolves" min="5" max="100" value="35" class="w-full slider-thumb">
-            <span id="initialWolvesValue" class="text-xs text-gray-600 dark:text-gray-400">35</span>
+            <span id="initialWolvesValue" class="text-xs text-gray-600">35</span>
           </div>
         </div>
         <div class="text-center mt-4 space-x-2">
