simulation starts frozen

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <!-- <h3 class="text-lg font-semibold text-gray-700 mb-3 text-center">Simulation Controls</h3> -->
         <div class="space-y-4 text-gray-700 text-med text-center">
           <p>
-            You might have noticed that the background of this site is a simulation itself! Use the sliders below to
+            The background of this site is actually a live simulation itself! Press 'Start' and use the sliders below to
             adjust the numbers of sheep and wolves, and see how long the sheep survive!
           </p>
         </div>
