--- a/index.html
+++ b/index.html
@@ -213,23 +213,77 @@
           <h2 class="text-2xl font-semibold text-gray-700 mb-6 border-b-2 border-blue-500 pb-2">Work Experience</h2>
           <div class="space-y-8">
             <div class="p-1">
-              <h3 class="text-xl font-semibold text-gray-800">[Job Title]</h3>
-              <p class="text-md text-blue-600">[Company Name] | [City, State]</p>
-              <p class="text-sm text-gray-500 mb-2">[Dates of Employment, e.g., Jan 2022 - Present]</p>
+              <h3 class="text-xl font-semibold text-gray-800">Software Engineer Intern</h3>
+              <p class="text-md text-blue-600">Honeywell | Atlanta, GA</p>
+              <p class="text-sm text-gray-500 mb-2">May – August 2025</p>
               <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
-                <li>Describe your key responsibilities and achievements. Use action verbs.</li>
-                <li>Quantify your accomplishments whenever possible (e.g., "Increased user engagement by 15%").</li>
-                <li>Highlight skills used and problems solved.</li>
+                <li>Improving Honeywell Forge Process Training Simulator software for chemical plant operators.</li>
               </ul>
             </div>
+
             <div class="p-1">
-              <h3 class="text-xl font-semibold text-gray-800">[Previous Job Title]</h3>
-              <p class="text-md text-blue-600">[Previous Company Name] | [City, State]</p>
-              <p class="text-sm text-gray-500 mb-2">[Dates of Employment]</p>
+              <h3 class="text-xl font-semibold text-gray-800">Future IT Leaders Intern (Generative AI Focus)</h3>
+              <p class="text-md text-blue-600">Honeywell | Charlotte, NC</p>
+              <p class="text-sm text-gray-500 mb-2">May – August 2024</p>
               <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
-                <li>Responsibility or achievement.</li>
-                <li>Another key contribution.</li>
+                <li>Spearheaded the design and development of a Generative AI POC leveraging OpenAI APIs, RAG, and prompt engineering.</li>
+                <li>Generated $107k annually by integrating ServiceNow, GitHub Actions, and REST APIs to automate VM deployment.</li>
+                <li>Collaborated with key business stakeholders to gather and refine POC requirements, employing an Agile methodology.</li>
+                <li>Selected to emcee the final intern presentations to IT leadership.</li>
               </ul>
+            </div>
+
+            <div class="p-1">
+              <h3 class="text-xl font-semibold text-gray-800">Developer Intern</h3>
+              <p class="text-md text-blue-600">J. J. Keller & Associates, Inc. | Neenah, WI</p>
+              <p class="text-sm text-gray-500 mb-2">May – August 2023</p>
+              <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
+                <li>Generated $500k in first-year revenue by delivering a customer-facing MVP on a team of 5 developers.</li>
+                <li>Wrote 33% of the backend code for the MVP by developing Azure Function APIs in C# and ReactJS, utilizing DDD.</li>
+                <li>Saved roughly 10 hours of labor per website release by developing RPA testing processes using UiPath.</li>
+                <li>Presented in daily standups and architectural reviews.</li>
+              </ul>
+            </div>
+
+            <div class="p-1">
+              <h3 class="text-xl font-semibold text-gray-800">Teaching Assistant (Graduate & Undergraduate)</h3>
+              <p class="text-md text-blue-600">Georgia Tech | Atlanta, GA</p>
+              <p class="text-sm text-gray-500 mb-2">August 2023 – Present</p>
+              <p class="text-sm text-gray-700 italic mb-2">Honors Algorithms (CS 3511), Computer Organization & Programming (CS 2110)</p>
+              <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
+                <li>Supported the professor on a TA team of 4 - designed homeworks and a project, guided students through problem solving and proofs.</li>
+                <li>Taught computer architecture concepts including digital logic, assembly, and C, across weekly labs and office hours.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="mb-10">
+          <h2 class="text-2xl font-semibold text-gray-700 mb-6 border-b-2 border-blue-500 pb-2">Education</h2>
+          <div class="space-y-8">
+            <div class="p-1">
+              <h3 class="text-xl font-semibold text-gray-800">Master of Science (M.S.), Computer Science</h3>
+              <p class="text-md text-blue-600">Georgia Institute of Technology | Atlanta, GA</p>
+              <p class="text-sm text-gray-500 mb-2">January – December 2025</p>
+              <p class="text-sm text-gray-700 mb-1">GPA: 4.0</p>
+              <p class="text-sm text-gray-700">Specialization: Modeling & Simulation</p>
+            </div>
+
+            <div class="p-1">
+              <h3 class="text-xl font-semibold text-gray-800">Bachelor of Science (B.S.), Computer Science</h3>
+              <p class="text-md text-blue-600">Georgia Institute of Technology | Atlanta, GA</p>
+              <p class="text-sm text-gray-500 mb-2">August 2021 – December 2024</p>
+              <p class="text-sm text-gray-700 mb-1">GPA: 4.0</p>
+              <p class="text-sm text-gray-700 mb-1">Concentrations: Intelligence (AI), Modeling & Simulation</p>
+              <p class="text-sm text-gray-700">Minor: Sustainable Cities</p>
+            </div>
+
+            <div class="p-1">
+              <h3 class="text-lg font-semibold text-gray-800">Key Coursework</h3>
+              <p class="text-sm text-gray-700">Data Structures & Algorithms, Machine Learning, Computer Vision, Simulations, High-Performance Computing, Systems & Networks</p>
+              <br>
+              <h3 class="text-lg font-semibold text-gray-800">Activities</h3>
+              <p class="text-sm text-gray-700">Reformed University Fellowship (RUF), Robotic Musicianship Lab</p>
             </div>
           </div>
         </div>
@@ -238,39 +292,40 @@
           <h2 class="text-2xl font-semibold text-gray-700 mb-6 border-b-2 border-blue-500 pb-2">Skills</h2>
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
             <div>
-              <h3 class="text-lg font-semibold text-gray-800 mb-3">Programming Languages</h3>
+              <h3 class="text-lg font-semibold text-gray-800 mb-3">Programming</h3>
               <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
-                <li>JavaScript (ES6+)</li>
                 <li>Python</li>
-                <li>HTML5 & CSS3</li>
+                <li>C, C#, C++/MPI</li>
+                <li>PyTorch, TensorFlow</li>
+                <li>NumPy, Pandas</li>
+                <li>JavaScript, ReactJS (& React Native)</li>
+                <li>Java</li>
                 <li>SQL</li>
+                <li>R</li>
               </ul>
             </div>
             <div>
-              <h3 class="text-lg font-semibold text-gray-800 mb-3">Frameworks & Libraries</h3>
+              <h3 class="text-lg font-semibold text-gray-800 mb-3">Software</h3>
               <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
-                <li>React.js / Vue.js / Angular</li>
-                <li>Node.js / Express.js</li>
-                <li>Tailwind CSS / Bootstrap</li>
-                <li>jQuery</li>
-              </ul>
-            </div>
-            <div>
-              <h3 class="text-lg font-semibold text-gray-800 mb-3">Tools & Platforms</h3>
-              <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
-                <li>Git & GitHub</li>
+                <li>REST APIs</li>
+                <li>OpenAI APIs</li>
+                <li>Git/GitHub</li>
                 <li>Docker</li>
-                <li>AWS / Azure / GCP</li>
-                <li>Figma / Adobe XD</li>
+                <li>UiPath</li>
+                <li>.NET</li>
+                <li>Azure Functions/DevOps</li>
+                <li>ServiceNow</li>
+                <li>GIS</li>
               </ul>
             </div>
             <div>
-              <h3 class="text-lg font-semibold text-gray-800 mb-3">Other Skills</h3>
+              <h3 class="text-lg font-semibold text-gray-800 mb-3">Communication</h3>
               <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
-                <li>Agile Methodologies</li>
-                <li>RESTful APIs</li>
-                <li>Database Management (e.g., PostgreSQL, MongoDB)</li>
-                <li>UI/UX Design Principles</li>
+                <li>Public speaking</li>
+                <li>Software demos</li>
+                <li>Lecturing (50+ students)</li>
+                <li>Presentations to stakeholders</li>
+                <li>Daily standups & sprint planning</li>
               </ul>
             </div>
           </div>
