--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
               <p class="text-sm text-gray-500 mb-2">August 2023 – Present</p>
               <p class="text-sm text-gray-700 italic mb-2">Honors Algorithms (CS 3511), Computer Organization & Programming (CS 2110)</p>
               <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
-                <li>Supported the professor on a TA team of 4 - designed homeworks and a project, guided students through problem solving and proofs.</li>
+                <li>Supported Honors Algorithms on a TA team of 4 - designed homeworks and a project, guided students through problem solving and proofs.</li>
                 <li>Taught computer architecture concepts including digital logic, assembly, and C, across weekly labs and office hours.</li>
               </ul>
             </div>
