--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
               <p class="text-sm text-gray-500 mb-2">August 2023 – Present</p>
               <p class="text-sm text-gray-700 italic mb-2">Honors Algorithms (CS 3511), Computer Organization & Programming (CS 2110)</p>
               <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
+                <li>Incoming Head TA of Design & Analysis of Algorithms (leading ~600 students, 30 TAs).</li>
                 <li>Supported Honors Algorithms on a TA team of 4 - designed homeworks and a project, guided students through problem solving and proofs.</li>
                 <li>Taught computer architecture concepts including digital logic, assembly, and C, across weekly labs and office hours.</li>
               </ul>
@@ -298,7 +299,7 @@
                 <li>C, C#, C++/MPI</li>
                 <li>PyTorch, TensorFlow</li>
                 <li>NumPy, Pandas</li>
-                <li>JavaScript, ReactJS (& React Native)</li>
+                <li>JavaScript, React</li>
                 <li>Java</li>
                 <li>SQL</li>
                 <li>R</li>
@@ -350,7 +351,7 @@
               <div class="md:w-2/3">
                 <h2 class="text-2xl font-semibold text-gray-800 mb-2">Puerto Rico Planning Studio
                 </h2>
-                <p class="text-sm text-gray-500 mb-3">Technologies: [e.g., React, Node.js, Tailwind CSS]</p>
+                <p class="text-sm text-gray-500 mb-3">Technologies: GIS, R</p>
                 <p class="text-gray-700 mb-4">
                   Conducted post-disaster reconstruction research in Puerto Rico, utilizing R and GIS mapping tools to
                   analyze construction trends. Represented the team and presented findings at the 2024 Georgia Tech
@@ -379,7 +380,7 @@
               </div>
               <div class="md:w-2/3">
                 <h2 class="text-2xl font-semibold text-gray-800 mb-2">Battle of Kapyong Simulation</h2>
-                <p class="text-sm text-gray-500 mb-3">Technologies: [e.g., Python, Django, PostgreSQL]</p>
+                <p class="text-sm text-gray-500 mb-3">Technologies: Agent-Based Modeling, NetLogo, Python</p>
                 <p class="text-gray-700 mb-4">
                   Agent-based model exploring terrain-weapon tradeoffs in military defense. Presented findings to
                   professors, generals, and industry professionals.
@@ -405,7 +406,7 @@
               </div>
               <div class="md:w-2/3">
                 <h2 class="text-2xl font-semibold text-gray-800 mb-2">AutoSpec (ML Car Classifier)</h2>
-                <p class="text-sm text-gray-500 mb-3">Technologies: [e.g., Swift, Firebase, UIKit]</p>
+                <p class="text-sm text-gray-500 mb-3">Technologies: Python, TensorFlow, NumPy</p>
                 <p class="text-gray-700 mb-4">
                   Used a Convolutional Neural Net along with Principal Component Analysis (PCA) to classify car models
                   from images with ~88% accuracy. Built with TensorFlow and the cars196 dataset.
@@ -428,7 +429,7 @@
               </div>
               <div class="md:w-2/3">
                 <h2 class="text-2xl font-semibold text-gray-800 mb-2">Campus Discovery Portal</h2>
-                <p class="text-sm text-gray-500 mb-3">Technologies: [e.g., Swift, Firebase, UIKit]</p>
+                <p class="text-sm text-gray-500 mb-3">Technologies: React, Java, Firebase, Agile/Scrum</p>
                 <p class="text-gray-700 mb-4">
                   Developed a full-stack React + Java Spring Boot application to help students discover organizations
                   and events on campus. Followed Scrum methodology on a small team.
