--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           Me</h1>
         <div class="md:flex md:items-start md:space-x-8">
           <div class="flex-shrink-0 mb-6 md:mb-0 text-center md:text-left">
-            <img src="Headshot.jpg" alt="Portrait photo"
+            <img src="files/Headshot.jpg" alt="Portrait photo"
               class="profile-picture rounded-full mx-auto md:mx-0 shadow-lg border-4 border-white object-cover w-40 h-40 object-top"
               onerror="this.onerror=null; this.src='https://placehold.co/200x200/e0e7ff/4338ca?text=Image+Error';">
           </div>
@@ -166,7 +166,7 @@
               </svg>
               jackrobert0627@outlook.com
             </a>
-            <a href="Jack-Keller-Resume.pdf" target="_blank" rel="noopener noreferrer"
+            <a href="files/Jack-Keller-Resume.pdf" target="_blank" rel="noopener noreferrer"
               class="flex items-center text-blue-600 dark:text-blue-400 hover:text-blue-800 dark:hover:text-blue-300 transition-colors group text-med">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
                 class="size-6 mr-3 text-slate-500 dark:text-slate-400 group-hover:text-blue-700 dark:group-hover:text-blue-300 transition-colors">
@@ -226,9 +226,12 @@
               <p class="text-md text-blue-600">Honeywell | Charlotte, NC</p>
               <p class="text-sm text-gray-500 mb-2">May – August 2024</p>
               <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
-                <li>Spearheaded the design and development of a Generative AI POC leveraging OpenAI APIs, RAG, and prompt engineering.</li>
-                <li>Generated $107k annually by integrating ServiceNow, GitHub Actions, and REST APIs to automate VM deployment.</li>
-                <li>Collaborated with key business stakeholders to gather and refine POC requirements, employing an Agile methodology.</li>
+                <li>Spearheaded the design and development of a Generative AI POC leveraging OpenAI APIs, RAG, and
+                  prompt engineering.</li>
+                <li>Generated $107k annually by integrating ServiceNow, GitHub Actions, and REST APIs to automate VM
+                  deployment.</li>
+                <li>Collaborated with key business stakeholders to gather and refine POC requirements, employing an
+                  Agile methodology.</li>
                 <li>Selected to emcee the final intern presentations to IT leadership.</li>
               </ul>
             </div>
@@ -238,9 +241,12 @@
               <p class="text-md text-blue-600">J. J. Keller & Associates, Inc. | Neenah, WI</p>
               <p class="text-sm text-gray-500 mb-2">May – August 2023</p>
               <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
-                <li>Generated $500k in first-year revenue by delivering a customer-facing MVP on a team of 5 developers.</li>
-                <li>Wrote 33% of the backend code for the MVP by developing Azure Function APIs in C# and ReactJS, utilizing DDD.</li>
-                <li>Saved roughly 10 hours of labor per website release by developing RPA testing processes using UiPath.</li>
+                <li>Generated $500k in first-year revenue by delivering a customer-facing MVP on a team of 5 developers.
+                </li>
+                <li>Wrote 33% of the backend code for the MVP by developing Azure Function APIs in C# and ReactJS,
+                  utilizing DDD.</li>
+                <li>Saved roughly 10 hours of labor per website release by developing RPA testing processes using
+                  UiPath.</li>
                 <li>Presented in daily standups and architectural reviews.</li>
               </ul>
             </div>
@@ -249,11 +255,14 @@
               <h3 class="text-xl font-semibold text-gray-800">Teaching Assistant (Graduate & Undergraduate)</h3>
               <p class="text-md text-blue-600">Georgia Tech | Atlanta, GA</p>
               <p class="text-sm text-gray-500 mb-2">August 2023 – Present</p>
-              <p class="text-sm text-gray-700 italic mb-2">Honors Algorithms (CS 3511), Computer Organization & Programming (CS 2110)</p>
+              <p class="text-sm text-gray-700 italic mb-2">Honors Algorithms (CS 3511), Computer Organization &
+                Programming (CS 2110)</p>
               <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
                 <li>Incoming Head TA of Design & Analysis of Algorithms (leading ~600 students, 30 TAs).</li>
-                <li>Supported Honors Algorithms on a TA team of 4 - designed homeworks and a project, guided students through problem solving and proofs.</li>
-                <li>Taught computer architecture concepts including digital logic, assembly, and C, across weekly labs and office hours.</li>
+                <li>Supported Honors Algorithms on a TA team of 4 - designed homeworks and a project, guided students
+                  through problem solving and proofs.</li>
+                <li>Taught computer architecture concepts including digital logic, assembly, and C, across weekly labs
+                  and office hours.</li>
               </ul>
             </div>
           </div>
@@ -281,7 +290,8 @@
 
             <div class="p-1">
               <h3 class="text-lg font-semibold text-gray-800">Key Coursework</h3>
-              <p class="text-sm text-gray-700">Data Structures & Algorithms, Machine Learning, Computer Vision, Simulations, High-Performance Computing, Systems & Networks</p>
+              <p class="text-sm text-gray-700">Data Structures & Algorithms, Machine Learning, Computer Vision,
+                Simulations, High-Performance Computing, Systems & Networks</p>
               <br>
               <h3 class="text-lg font-semibold text-gray-800">Activities</h3>
               <p class="text-sm text-gray-700">Reformed University Fellowship (RUF), Robotic Musicianship Lab</p>
@@ -312,11 +322,11 @@
                 <li>OpenAI APIs</li>
                 <li>Git/GitHub</li>
                 <li>Docker</li>
-                <li>UiPath</li>
+                <li>Microsoft Azure</li>
                 <li>.NET</li>
-                <li>Azure Functions/DevOps</li>
-                <li>ServiceNow</li>
                 <li>GIS</li>
+                <li>ServiceNow</li>
+                <li>UiPath</li>
               </ul>
             </div>
             <div>
@@ -344,27 +354,41 @@
           <article class="project-card bg-gray-50 p-6 rounded-lg shadow-md overflow-hidden">
             <div class="md:flex md:space-x-6">
               <div class="md:w-1/3 mb-4 md:mb-0">
-                <img src="projects_media/puerto-rico.jpeg" alt="Project 1 Screenshot"
-                  class="w-full h-auto object-cover rounded-md shadow-sm"
-                  onerror="this.onerror=null; this.src='https://placehold.co/600x400/e2e8f0/334155?text=Image+Error';">
-              </div>
+                <video src="projects_media/puerto-rico-presentation.mov"
+                  class="w-full h-auto object-cover rounded-md shadow-sm mb-4" controls controlsList="fullscreen"
+                  onerror="this.onerror=null; this.src='https://placehold.co/600x400/dbeafe/1e3a8a?text=Video+Error';">
+                </video>
+                <img src="projects_media/Post Irma-Maria Private Permits Per Capita - San Juan.png" alt="Puerto Rico Construction Permits"
+                  class="w-full h-auto object-cover rounded-md shadow-sm mt-4"
+                  onerror="this.onerror=null; this.src='https://placehold.co/600x400/ccfbf1/0f766e?text=Image+Error';">
+                </div>
               <div class="md:w-2/3">
                 <h2 class="text-2xl font-semibold text-gray-800 mb-2">Puerto Rico Planning Studio
                 </h2>
-                <p class="text-sm text-gray-500 mb-3">Technologies: GIS, R</p>
+                <p class="text-sm text-gray-500 mb-3">Technologies: GIS, R, Data Analysis/Visualization</p>
                 <p class="text-gray-700 mb-4">
-                  Conducted post-disaster reconstruction research in Puerto Rico, utilizing R and GIS mapping tools to
-                  analyze construction trends. Represented the team and presented findings at the 2024 Georgia Tech
-                  Sustainability Showcase.
-
+                  Participated in the 2024 Puerto Rico Planning Studio led by Dr. Alberto Fuentes, conducting
+                  post-disaster reconstruction research with the Center for a New Economy and completing fieldwork
+                  during a week-long trip to San Juan.
+                  <br><br>
+                  Researched post-disaster reconstruction in Puerto Rico following Hurricanes Irma, Maria, and Fiona
+                  (see "Private Reconstruction" section on the poster below). My
+                  contributions included using R and GIS tools to analyze and visualize trends in construction permits
+                  over time. To fully understand the permitting process, we interviewed organizations including the
+                  Puerto Rico Permits Management Office (OGPe), Planning Board, and Builders Association (ACPR).
+                  <br><br>
+                  Highlights included traveling to San Juan, Puerto Rico during spring break to conduct fieldwork and
+                  presenting at the 2024 Georgia Tech Sustainability Showcase (see left)!
                 </p>
                 <div class="space-x-3">
-                  <a href="#"
+                  <a href="files/PR_Planning_Studio_Poster.pdf"
                     class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded-lg transition-colors text-sm">View
-                    Live</a>
-                  <a href="#"
+                    Poster</a>
+                    <!-- <a href="#"
                     class="inline-block bg-gray-700 hover:bg-gray-800 text-white font-medium py-2 px-4 rounded-lg transition-colors text-sm">Source
-                    Code</a>
+                    Code</a> -->
+                  <!-- <a href="files/PR_Planning_Studio_Report.pdf"
+                    class="inline-block bg-gray-700 hover:bg-gray-800 text-white font-medium py-2 px-4 rounded-lg transition-colors text-sm">See Report</a> -->
                 </div>
               </div>
             </div>
@@ -382,16 +406,22 @@
                 <h2 class="text-2xl font-semibold text-gray-800 mb-2">Battle of Kapyong Simulation</h2>
                 <p class="text-sm text-gray-500 mb-3">Technologies: Agent-Based Modeling, NetLogo, Python</p>
                 <p class="text-gray-700 mb-4">
-                  Agent-based model exploring terrain-weapon tradeoffs in military defense. Presented findings to
-                  professors, generals, and industry professionals.
+                  Developed an agent-based model using NetLogo to analyze terrain-weapon tradeoffs in battlefield
+                  defense; presented findings to professors, generals, and government officials.
+                  <br><br>
+                  Inspired by the Battle of Kapyong (Korean War, 1951), the project explored how steeper terrain offers
+                  defensive advantages but also introduces challenges, as transporting heavy weaponry increases soldier
+                  fatigue and reduces firepower effectiveness. Findings highlighted that while steep terrain generally
+                  improves casualty rates for defenders, the benefit of added weaponry diminishes at higher slopes —
+                  offering strategic insights into terrain-firepower tradeoffs in military defense planning.
                 </p>
                 <div class="space-x-3">
-                  <a href="#"
+                  <a href="files/Battle_of_Kapyong.pdf"
                     class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded-lg transition-colors text-sm">View
-                    Live</a>
-                  <a href="#"
+                    Report</a>
+                  <!-- <a href="#"
                     class="inline-block bg-gray-700 hover:bg-gray-800 text-white font-medium py-2 px-4 rounded-lg transition-colors text-sm">Source
-                    Code</a>
+                    Code</a> -->
                 </div>
               </div>
             </div>
@@ -406,15 +436,21 @@
               </div>
               <div class="md:w-2/3">
                 <h2 class="text-2xl font-semibold text-gray-800 mb-2">AutoSpec (ML Car Classifier)</h2>
-                <p class="text-sm text-gray-500 mb-3">Technologies: Python, TensorFlow, NumPy</p>
+                <p class="text-sm text-gray-500 mb-3">Technologies: CNNs, Python, TensorFlow, NumPy</p>
                 <p class="text-gray-700 mb-4">
-                  Used a Convolutional Neural Net along with Principal Component Analysis (PCA) to classify car models
-                  from images with ~88% accuracy. Built with TensorFlow and the cars196 dataset.
+                  Applied machine learning techniques including convolutional neural networks (both untrained and
+                  pre-trained) along with principal component analysis to detect car models from images.
+                  <br><br>
+                  Achieved 88.52%
+                  test accuracy using the cars196 dataset, which includes 16,185 images of 196 classes of cars.
                 </p>
                 <div class="space-x-3">
-                  <a href="#"
+                  <a href="files/AutoSpec_Final_Report.pdf"
+                    class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded-lg transition-colors text-sm">View
+                    Report</a>
+                  <!-- <a href="#"
                     class="inline-block bg-gray-700 hover:bg-gray-800 text-white font-medium py-2 px-4 rounded-lg transition-colors text-sm">Source
-                    Code</a>
+                    Code</a> -->
                 </div>
               </div>
             </div>
@@ -429,15 +465,23 @@
               </div>
               <div class="md:w-2/3">
                 <h2 class="text-2xl font-semibold text-gray-800 mb-2">Campus Discovery Portal</h2>
-                <p class="text-sm text-gray-500 mb-3">Technologies: React, Java, Firebase, Agile/Scrum</p>
+                <p class="text-sm text-gray-500 mb-3">Technologies: React, Java, Google Firestore, Agile/Scrum</p>
                 <p class="text-gray-700 mb-4">
-                  Developed a full-stack React + Java Spring Boot application to help students discover organizations
-                  and events on campus. Followed Scrum methodology on a small team.
+                  Collaborated with five teammates to develop a campus events portal enabling users to host events,
+                  RSVP, and view locations on an interactive map. Built with ReactJS, a Java Spring Boot backend, and a
+                  Google Cloud Firestore database. Contributed to both front-end and back-end development while
+                  documenting the project’s design using UML.
+                  <br><br>
+                  Followed Scrum methodology and utilized an object-oriented
+                  approach for back-end development.
                 </p>
                 <div class="space-x-3">
-                  <a href="#"
+                  <a href="https://gatechcampusdisc.netlify.app/"
+                    class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded-lg transition-colors text-sm">View
+                    Site</a>
+                    <!-- <a href="#"
                     class="inline-block bg-gray-700 hover:bg-gray-800 text-white font-medium py-2 px-4 rounded-lg transition-colors text-sm">Source
-                    Code</a>
+                    Code</a> -->
                 </div>
               </div>
             </div>
@@ -480,7 +524,7 @@
           </span>
         </a>
       </div>
-      <p class="mt-2 text-sm"><a href="Jack-Keller-Resume.pdf" download="Jack-Keller-Resume.pdf"
+      <p class="mt-2 text-sm"><a href="files/Jack-Keller-Resume.pdf" download="Jack-Keller-Resume.pdf"
           class="text-blue-500 hover:text-blue-700">Download Resume</a></p>
     </div>
   </footer>
