Added repo links

--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@
                   <a href="files/PR_Planning_Studio_Poster.pdf"
                     class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded-lg transition-colors text-sm">View
                     Poster</a>
-                    <!-- <a href="#"
+                    <a href="https://github.com/JackKeller27/puerto-rico-planning-studio-24/tree/main"
                     class="inline-block bg-gray-700 hover:bg-gray-800 text-white font-medium py-2 px-4 rounded-lg transition-colors text-sm">Source
-                    Code</a> -->
+                    Code</a>
                   <!-- <a href="files/PR_Planning_Studio_Report.pdf"
                     class="inline-block bg-gray-700 hover:bg-gray-800 text-white font-medium py-2 px-4 rounded-lg transition-colors text-sm">See Report</a> -->
                 </div>
@@ -419,9 +419,9 @@
                   <a href="files/Battle_of_Kapyong.pdf"
                     class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded-lg transition-colors text-sm">View
                     Report</a>
-                  <!-- <a href="#"
+                  <a href="#"
                     class="inline-block bg-gray-700 hover:bg-gray-800 text-white font-medium py-2 px-4 rounded-lg transition-colors text-sm">Source
-                    Code</a> -->
+                    Code</a>
                 </div>
               </div>
             </div>
