--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                   <a href="files/Battle_of_Kapyong.pdf"
                     class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded-lg transition-colors text-sm">View
                     Report</a>
-                  <a href="#"
+                  <a href="https://github.com/JackKeller27/kapyong-simulation"
                     class="inline-block bg-gray-700 hover:bg-gray-800 text-white font-medium py-2 px-4 rounded-lg transition-colors text-sm">Source
                     Code</a>
                 </div>
