--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
               <p class="text-md text-blue-600">Honeywell | Atlanta, GA</p>
               <p class="text-sm text-gray-500 mb-2">May – August 2025</p>
               <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
-                <li>Developing a controls system (PLC) emulator for Honeywell Forge Process Training Simulator software (used by chemical plant operators).</li>
+                <li>Redesigning a C++/Fortran PLC emulator in C# to integrate with Process Training Simulator software for industrial plants.</li>
               </ul>
             </div>
 
