--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                 TA</strong> in Fall 2025!
             </p>
             <p>
-              My primary interests lie in <strong>modeling and simulation</strong> and <strong>artificial
-                intelligence</strong>. I aim to apply these technologies to areas like infrastructure and
+              My primary interests lie in <strong>modeling and simulation</strong> and <strong>machine
+                learning</strong>. I aim to apply these technologies to areas like infrastructure and
               urban planning, science, and sustainability to improve people’s lives and society as a whole.
             </p>
           </div>
