--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <p>
               My primary interests lie in <strong>modeling and simulation</strong> and <strong>machine
                 learning</strong>. I aim to apply these technologies to areas like infrastructure and
-              urban planning, science, and sustainability to improve people’s lives and society as a whole.
+              urban planning, government, and sustainability to improve people’s lives and our society as a whole.
             </p>
           </div>
         </div>
