--- a/index.html
+++ b/index.html
@@ -217,7 +217,9 @@
               <p class="text-md text-blue-600">Honeywell | Atlanta, GA</p>
               <p class="text-sm text-gray-500 mb-2">May – August 2025</p>
               <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
-                <li>Redesigning a C++/Fortran PLC emulator in C# to integrate with Process Training Simulator software for industrial plants.</li>
+                <li>Enhanced training simulations for industrial plant operators by redesigning a legacy C++/Fortran DCS emulator in C#.</li>
+                <li>Achieved 2x performance gain over the legacy system through architectural improvements and efficient implementation.</li>
+                <li>Built a modular, extensible OOP architecture from scratch by creating and implementing UML diagrams.</li>
               </ul>
             </div>
 
@@ -226,8 +228,7 @@
               <p class="text-md text-blue-600">Honeywell | Charlotte, NC</p>
               <p class="text-sm text-gray-500 mb-2">May – August 2024</p>
               <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
-                <li>Spearheaded the design and development of a Generative AI POC leveraging OpenAI APIs, RAG, and
-                  prompt engineering.</li>
+                <li>Reduced product comparison time by 80% through developing a RAG tool using OpenAI APIs and vector embeddings.</li>
                 <li>Generated $107k annually by integrating ServiceNow, GitHub Actions, and REST APIs to automate VM
                   deployment.</li>
                 <li>Collaborated with key business stakeholders to gather and refine POC requirements, employing an
@@ -243,26 +244,23 @@
               <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
                 <li>Generated $500k in first-year revenue by delivering a customer-facing MVP on a team of 5 developers.
                 </li>
-                <li>Wrote 33% of the backend code for the MVP by developing Azure Function APIs in C# and ReactJS,
-                  utilizing DDD.</li>
+                <li>Wrote 33% of the backend for the MVP, developing Azure Function APIs in C# and integrating them with a React frontend.</li>
                 <li>Saved roughly 10 hours of labor per website release by developing RPA testing processes using
                   UiPath.</li>
-                <li>Presented in daily standups and architectural reviews.</li>
               </ul>
             </div>
 
             <div class="p-1">
-              <h3 class="text-xl font-semibold text-gray-800">Teaching Assistant (Graduate & Undergraduate)</h3>
+              <h3 class="text-xl font-semibold text-gray-800">Head Teaching Assistant</h3>
               <p class="text-md text-blue-600">Georgia Tech | Atlanta, GA</p>
               <p class="text-sm text-gray-500 mb-2">August 2023 – Present</p>
-              <p class="text-sm text-gray-700 italic mb-2">Honors Algorithms (CS 3511), Computer Organization &
-                Programming (CS 2110)</p>
+              <p class="text-sm text-gray-700 italic mb-2">Design & Analysis of Algorithms (Head TA), Computer Organization &
+                Programming (TA)</p>
               <ul class="list-disc list-inside text-gray-700 space-y-1 pl-4">
-                <li>Incoming Head TA of Design & Analysis of Algorithms (leading ~600 students, 30 TAs).</li>
-                <li>Supported Honors Algorithms on a TA team of 4 - designed homeworks and a project, guided students
+                <li>Incoming Head TA of Design & Analysis of Algorithms, overseeing ~600 students and 30 TAs.</li>
+                <li>Co-led Honors Algorithms on a TA team of 4: designed homeworks and a project, guided students
                   through problem solving and proofs.</li>
-                <li>Taught computer architecture concepts including digital logic, assembly, and C, across weekly labs
-                  and office hours.</li>
+                <li>Taught 50+ students weekly and held office hours on computer architecture topics including digital logic, assembly, and C.</li>
               </ul>
             </div>
           </div>
@@ -322,7 +320,7 @@
                 <li>OpenAI APIs</li>
                 <li>Git/GitHub</li>
                 <li>Docker</li>
-                <li>Microsoft Azure</li>
+                <li>Microsoft Azure (Functions, Storage)</li>
                 <li>.NET</li>
                 <li>GIS</li>
                 <li>ServiceNow</li>
