--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   Tech</strong></span> studying <strong>Computer Science</strong> and
               specializing in <strong>Modeling & Simulation</strong>. I graduate this December, and I’m currently
               pursuing full-time
-              <strong>software engineering</strong> (or related) roles beginning as early as January 2026.
+              <strong>software engineering</strong> roles beginning as early as January 2026.
             </p>
             <p>
               Alongside several <strong>software engineering internships</strong> and <strong>research
