--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
             </p>
             <p>
               My primary interests lie in <strong>modeling and simulation</strong> and <strong>machine
-                learning</strong>. I aim to apply these technologies to areas like infrastructure and
-              urban planning, government, and sustainability to improve people’s lives and our society as a whole.
+                learning</strong>. I aim to apply these technologies to areas like engineering, cities, and sustainability to improve people’s lives and our society as a whole.
             </p>
           </div>
         </div>
