--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@
             <p>
               Hello! My name is Jack Keller, and I’m a Master’s student at <span class="text-[#B3A369]"><strong>Georgia
                   Tech</strong></span> studying <strong>Computer Science</strong> and
-              specializing in <strong>Modeling & Simulation</strong>. I graduate this December, and I’m currently
-              pursuing full-time
-              <strong>software engineering</strong> roles beginning as early as January 2026.
+                specializing in <strong>Modeling & Simulation</strong>. After graduation in December, I'm excited to join <a href="https://www.mathworks.com/" class="text-blue-600 hover:text-blue-800"> MathWorks</a> as a software engineer in the EDG program!
             </p>
             <p>
               Alongside several <strong>software engineering internships</strong> and <strong>research
